testsuite/tests/parser/should_fail/T16999.hs
module T16999 where

data Type
  = TBool
  | TInt
  | (->) Type Type
