testsuite/tests/parser/should_fail/T16999.stderr

T16999.hs:6:5: error: [GHC-25742] Not a data constructor: ‘->’
